--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="./libs/normalize.css">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Document</title>
+  </head>
+  <body>
+    <p>sdfghjk</p>
+    <div id="fullpage">
+      <div class="section">1</div>
+      <div class="section">2</div>
+      <div class="section">3</div>
+      <div class="section">4</div>
+    </div>
+
+    <script type="module" src="./scripts/index.js"></script>
+  </body>
 </html>
