--- a/index.html
+++ b/index.html
@@ -7,12 +7,65 @@
     <title>Document</title>
   </head>
   <body>
-    <p>sdfghjk</p>
     <div id="fullpage">
-      <div class="section">1</div>
+      <header class="header">
+        <div class="header__logo">
+          <img src="./src/images/logo-white.png" alt="Coca Cola logo" />
+        </div>
+        <nav class="header__menu">
+          <ul class="header__menu-list">
+            <li>Main</li>
+            <li>About</li>
+            <li>Products</li>
+            <li>Conctacts</li>
+          </ul>
+          <div class="header__burger">
+            <div class="header__burger-lines">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
+          </div>
+        </nav>
+      </header>
+      <div class="section hero">
+        <div class="hero__info">
+          <h1 class="hero__title">Main Site Title</h1>
+          <p class="hero__subtitle">Lorem ipsum descripsum</p>
+          <a class="hero__button">Call to action</a>
+        </div>
+        <div class="hero__arrow">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="38"
+            height="37"
+            viewBox="0 0 38 37"
+            fill="none"
+          >
+            <path
+              d="M17.3153 35.7709C18.2939 36.7449 19.8768 36.7412 20.8508 35.7627L36.7237 19.8159C37.6978 18.8373 37.6941 17.2544 36.7155 16.2803C35.7369 15.3063 34.154 15.31 33.18 16.2885L19.0707 30.4635L4.8958 16.3542C3.91722 15.3802 2.33431 15.3838 1.36027 16.3624C0.38623 17.341 0.389905 18.9239 1.36848 19.8979L17.3153 35.7709ZM16.5 0.00580414L16.5789 34.0048L21.5789 33.9932L21.5 -0.00580414L16.5 0.00580414Z"
+              fill="white"
+            />
+          </svg>
+        </div>
+        <div class="hero__snowflake">
+          <img src="./src/images/big-snowflake.png" alt="snowflake" />
+        </div>
+        <div class="hero__santa">
+          <img src="./src/images/santa.png" alt="santa" />
+        </div>
+        <div class="hero__cloud">
+          <div class="cloud__circle">
+            <div class="cloud__triangle"></div>
+            <div class="cloud__text">
+              <p>How how how !!!</p>
+              <p>Like it?</p>
+              <p>Scroll down for more !</p>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="section">2</div>
-      <div class="section">3</div>
-      <div class="section">4</div>
     </div>
 
     <script type="module" src="./scripts/index.js"></script>
