--- a/index.html
+++ b/index.html
@@ -149,6 +149,27 @@
           </div>
         </div>
       </div>
+      <div class="section contact">
+        <div class="contact__inner">
+          <h2 class="contact__title">Write us for real presents</h2>
+          <form action="/" class="contact__form">
+            <input type="text" placeholder="Name" class="form__input" />
+            <input type="text" placeholder="Phone" class="form__input" />
+            <select class="form__input">
+              <option value="gender">Gender</option>
+              <option value="boy">Boy</option>
+              <option value="girl">Girl</option>
+            </select>
+            <input type="text" placeholder="Email" class="form__input" />
+            <textarea placeholder="Your wish" class="form__textarea"></textarea>
+            <label for="cola" class="form__checkbox-container">
+              <input type="checkbox" id="cola" class="checkbox" />
+              <span class="checkmark"></span>
+              Whant Coca-cola with present ?</label
+            >
+          </form>
+        </div>
+      </div>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
