--- a/index.html
+++ b/index.html
@@ -11,168 +11,188 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="fullpage">
-      <header class="header">
-        <div class="header__logo">
-          <img src="./src/images/logo-white.png" alt="Coca Cola logo" />
-        </div>
-        <nav class="header__menu">
-          <ul class="header__menu-list">
-            <li>Main</li>
-            <li>About</li>
-            <li>Products</li>
-            <li>Conctacts</li>
-          </ul>
-          <div class="header__burger">
-            <div class="header__burger-lines">
-              <span></span>
-              <span></span>
-              <span></span>
+    <div id="page-slider" class="page-slider swiper-container">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <header class="header">
+            <div class="header__logo">
+              <img src="./src/images/logo-white.png" alt="Coca Cola logo" />
             </div>
-          </div>
-        </nav>
-      </header>
-      <div class="section hero">
-        <div class="hero__info">
-          <h1 class="hero__title">Main Site Title</h1>
-          <p class="hero__subtitle">Lorem ipsum descripsum</p>
-          <a class="hero__button">Call to action</a>
-        </div>
-        <div class="hero__arrow">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="38"
-            height="37"
-            viewBox="0 0 38 37"
-            fill="none"
-          >
-            <path
-              d="M17.3153 35.7709C18.2939 36.7449 19.8768 36.7412 20.8508 35.7627L36.7237 19.8159C37.6978 18.8373 37.6941 17.2544 36.7155 16.2803C35.7369 15.3063 34.154 15.31 33.18 16.2885L19.0707 30.4635L4.8958 16.3542C3.91722 15.3802 2.33431 15.3838 1.36027 16.3624C0.38623 17.341 0.389905 18.9239 1.36848 19.8979L17.3153 35.7709ZM16.5 0.00580414L16.5789 34.0048L21.5789 33.9932L21.5 -0.00580414L16.5 0.00580414Z"
-              fill="white"
-            />
-          </svg>
-        </div>
-        <div class="hero__snowflake">
-          <img src="./src/images/big-snowflake.png" alt="snowflake" />
-        </div>
-        <div class="hero__santa">
-          <img src="./src/images/santa.png" alt="santa" />
-        </div>
-        <div class="hero__cloud">
-          <div class="cloud__circle">
-            <div class="cloud__triangle"></div>
-            <div class="cloud__text">
-              <p>How how how !!!</p>
-              <p>Like it?</p>
-              <p>Scroll down for more !</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="section presents">
-        <div class="presents__left">
-          <h2 class="presents__title">
-            At least somewhere you can feel new year atmosphere
-          </h2>
-          <p class="presents__subtitle">Choose your present:</p>
-          <div class="presents__options">
-            <button
-              data-swiper-id="0"
-              class="present__single-option present__single-option--sock active"
-            >
-              <img src="./src/images/new-year-sock.png" alt="" />
-            </button>
-            <button
-              data-swiper-id="1"
-              class="present__single-option present__single-option--hat"
-            >
-              <img src="./src/images/christmas-hat.png" alt="" />
-            </button>
-            <button
-              data-swiper-id="2"
-              class="present__single-option present__single-option--bag"
-            >
-              <img src="./src/images/new-year-bag.png" alt="" />
-            </button>
-          </div>
-        </div>
-        <div class="presents__slider">
-          <div class="swiper-container">
-            <div class="swiper-wrapper">
-              <div class="swiper-slide">
-                <div class="slide__info">
-                  <h3 class="slide__title">Best sock ever</h3>
-                  <p class="slide__text">Reuglar sock have no present inside</p>
-                  <p class="slide__text">
-                    Lorem Ipsum is simply dumm y text of the printing and types
-                    etting industry. Lorem
-                  </p>
-                </div>
-                <div class="slide__img">
-                  <img
-                    src="./src/images/new-year-sock.png"
-                    alt="new year sock"
-                  />
+            <nav class="header__menu">
+              <ul class="header__menu-list">
+                <li>Main</li>
+                <li>About</li>
+                <li>Products</li>
+                <li>Conctacts</li>
+              </ul>
+              <div class="header__burger">
+                <div class="header__burger-lines">
+                  <span></span>
+                  <span></span>
+                  <span></span>
                 </div>
               </div>
-              <div class="swiper-slide">
-                <div class="slide__info">
-                  <h3 class="slide__title">Best hat ever</h3>
-                  <p class="slide__text">Reuglar sock have no present inside</p>
-                  <p class="slide__text">
-                    Lorem Ipsum is simply dumm y text of the printing and types
-                    etting industry. Lorem
-                  </p>
-                </div>
-                <div class="slide__img">
-                  <img
-                    src="./src/images/christmas-hat.png"
-                    alt="christmas hat"
-                  />
-                </div>
-              </div>
-              <div class="swiper-slide">
-                <div class="slide__info">
-                  <h3 class="slide__title">Best bag ever</h3>
-                  <p class="slide__text">Reuglar sock have no present inside</p>
-                  <p class="slide__text">
-                    Lorem Ipsum is simply dumm y text of the printing and types
-                    etting industry. Lorem
-                  </p>
-                </div>
-                <div class="slide__img">
-                  <img src="./src/images/new-year-bag.png" alt="new year bag" />
+            </nav>
+          </header>
+          <div class="section hero">
+            <div class="hero__info">
+              <h1 class="hero__title">Main Site Title</h1>
+              <p class="hero__subtitle">Lorem ipsum descripsum</p>
+              <a class="hero__button">Call to action</a>
+            </div>
+            <div class="hero__arrow">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="38"
+                height="37"
+                viewBox="0 0 38 37"
+                fill="none"
+              >
+                <path
+                  d="M17.3153 35.7709C18.2939 36.7449 19.8768 36.7412 20.8508 35.7627L36.7237 19.8159C37.6978 18.8373 37.6941 17.2544 36.7155 16.2803C35.7369 15.3063 34.154 15.31 33.18 16.2885L19.0707 30.4635L4.8958 16.3542C3.91722 15.3802 2.33431 15.3838 1.36027 16.3624C0.38623 17.341 0.389905 18.9239 1.36848 19.8979L17.3153 35.7709ZM16.5 0.00580414L16.5789 34.0048L21.5789 33.9932L21.5 -0.00580414L16.5 0.00580414Z"
+                  fill="white"
+                />
+              </svg>
+            </div>
+            <div class="hero__snowflake">
+              <img src="./src/images/big-snowflake.png" alt="snowflake" />
+            </div>
+            <div class="hero__santa">
+              <img src="./src/images/santa.png" alt="santa" />
+            </div>
+            <div class="hero__cloud">
+              <div class="cloud__circle">
+                <div class="cloud__triangle"></div>
+                <div class="cloud__text">
+                  <p>How how how !!!</p>
+                  <p>Like it?</p>
+                  <p>Scroll down for more !</p>
                 </div>
               </div>
             </div>
-            <div class="swiper-pagination"></div>
           </div>
         </div>
-      </div>
-      <div class="section contact">
-        <div class="contact__inner">
-          <h2 class="contact__title">Write us for real presents</h2>
-          <form action="/" class="contact__form">
-            <input type="text" placeholder="Name" class="form__input" />
-            <input type="text" placeholder="Phone" class="form__input" />
-            <select class="form__input">
-              <option value="gender">Gender</option>
-              <option value="boy">Boy</option>
-              <option value="girl">Girl</option>
-            </select>
-            <input type="text" placeholder="Email" class="form__input" />
-            <textarea placeholder="Your wish" class="form__textarea"></textarea>
-            <label for="cola" class="form__checkbox-container">
-              <input type="checkbox" id="cola" class="checkbox" />
-              <span class="checkmark"></span>
-              Whant Coca-cola with present ?</label
-            >
-          </form>
+        <div class="swiper-slide">
+          <div class="section presents">
+            <div class="presents__left">
+              <h2 class="presents__title">
+                At least somewhere you can feel new year atmosphere
+              </h2>
+              <p class="presents__subtitle">Choose your present:</p>
+              <div class="presents__options">
+                <button
+                  data-swiper-id="0"
+                  class="present__single-option present__single-option--sock active"
+                >
+                  <img src="./src/images/new-year-sock.png" alt="" />
+                </button>
+                <button
+                  data-swiper-id="1"
+                  class="present__single-option present__single-option--hat"
+                >
+                  <img src="./src/images/christmas-hat.png" alt="" />
+                </button>
+                <button
+                  data-swiper-id="2"
+                  class="present__single-option present__single-option--bag"
+                >
+                  <img src="./src/images/new-year-bag.png" alt="" />
+                </button>
+              </div>
+            </div>
+            <div class="presents__right">
+              <div id="presents__slider" class="presents__slider swiper-container">
+                <div class="swiper-wrapper">
+                  <div class="swiper-slide">
+                    <div class="slide__info">
+                      <h3 class="slide__title">Best sock ever</h3>
+                      <p class="slide__text">
+                        Reuglar sock have no present inside
+                      </p>
+                      <p class="slide__text">
+                        Lorem Ipsum is simply dumm y text of the printing and
+                        types etting industry. Lorem
+                      </p>
+                    </div>
+                    <div class="slide__img">
+                      <img
+                        src="./src/images/new-year-sock.png"
+                        alt="new year sock"
+                      />
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="slide__info">
+                      <h3 class="slide__title">Best hat ever</h3>
+                      <p class="slide__text">
+                        Reuglar sock have no present inside
+                      </p>
+                      <p class="slide__text">
+                        Lorem Ipsum is simply dumm y text of the printing and
+                        types etting industry. Lorem
+                      </p>
+                    </div>
+                    <div class="slide__img">
+                      <img
+                        src="./src/images/christmas-hat.png"
+                        alt="christmas hat"
+                      />
+                    </div>
+                  </div>
+                  <div class="swiper-slide">
+                    <div class="slide__info">
+                      <h3 class="slide__title">Best bag ever</h3>
+                      <p class="slide__text">
+                        Reuglar sock have no present inside
+                      </p>
+                      <p class="slide__text">
+                        Lorem Ipsum is simply dumm y text of the printing and
+                        types etting industry. Lorem
+                      </p>
+                    </div>
+                    <div class="slide__img">
+                      <img
+                        src="./src/images/new-year-bag.png"
+                        alt="new year bag"
+                      />
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-pagination"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="swiper-slide">
+          <div class="section contact">
+            <div class="contact__inner">
+              <h2 class="contact__title">Write us for real presents</h2>
+              <form action="/" class="contact__form">
+                <input type="text" placeholder="Name" class="form__input" />
+                <input type="text" placeholder="Phone" class="form__input" />
+                <select class="form__input">
+                  <option value="gender">Gender</option>
+                  <option value="boy">Boy</option>
+                  <option value="girl">Girl</option>
+                </select>
+                <input type="text" placeholder="Email" class="form__input" />
+                <textarea
+                  placeholder="Your wish"
+                  class="form__textarea"
+                ></textarea>
+                <label for="cola" class="form__checkbox-container">
+                  <input type="checkbox" id="cola" class="checkbox" />
+                  <span class="checkmark"></span>
+                  Whant Coca-cola with present ?</label
+                >
+              </form>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script type="module" src="./scripts/index.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   </body>
 </html>
