remove slider on mobile

--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
               </div>
             </div>
             <div class="presents__right">
-              <div id="presents__slider" class="presents__slider swiper-container">
+              <div
+                id="presents__slider"
+                class="presents__slider swiper-container"
+              >
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="slide__info">
@@ -194,5 +197,6 @@
 
     <script type="module" src="./scripts/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
   </body>
 </html>
