--- a/index.html
+++ b/index.html
@@ -20,10 +20,34 @@
             </div>
             <nav class="header__menu">
               <ul class="header__menu-list">
-                <li>Main</li>
-                <li>About</li>
-                <li>Products</li>
-                <li>Conctacts</li>
+                <li class="menu-list__item">
+                  <a href="#" class="menu-list__link">
+                    <div class="white">Main</div>
+                    <div class="red">Main</div>
+                    Main
+                  </a>
+                </li>
+                <li class="menu-list__item">
+                  <a href="#" class="menu-list__link">
+                    <div class="white">About</div>
+                    <div class="red">About</div>
+                    About
+                  </a>
+                </li>
+                <li class="menu-list__item">
+                  <a href="#" class="menu-list__link">
+                    <div class="white">Products</div>
+                    <div class="red">Products</div>
+                    Products
+                  </a>
+                </li>
+                <li class="menu-list__item">
+                  <a href="#" class="menu-list__link">
+                    <div class="white">Conctacts</div>
+                    <div class="red">Conctacts</div>
+                    Conctacts
+                  </a>
+                </li>
               </ul>
               <div class="header__burger">
                 <div class="header__burger-lines">
