add animation for menu opening

--- a/index.html
+++ b/index.html
@@ -46,14 +46,33 @@
             </a>
           </li>
         </ul>
-        <div class="header__burger">
-          <div class="header__burger-lines">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-        </div>
       </nav>
+      <div class="header__burger">
+        <div class="header__burger-lines">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+      <div class="sidebar">
+        <nav class="sidemenu">
+          <ul class="sidemenu__list">
+            <li class="sidemenu__list-item">
+              <a href="#" class="sidemenu__link">Main</a>
+            </li>
+            <li class="sidemenu__list-item">
+              <a href="#" class="sidemenu__link">About</a>
+            </li>
+            <li class="sidemenu__list-item">
+              <a href="#" class="sidemenu__link">Products</a>
+            </li>
+            <li class="sidemenu__list-item">
+              <a href="#" class="sidemenu__link">Conctacts</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div id="bg-circle" class="bg-circle"></div>
     </header>
     <div id="page-slider" class="page-slider swiper-container">
       <div class="swiper-wrapper">
