--- a/index.html
+++ b/index.html
@@ -216,11 +216,16 @@
               <form action="/" class="contact__form">
                 <input type="text" placeholder="Name" class="form__input" />
                 <input type="text" placeholder="Phone" class="form__input" />
-                <select class="form__input">
-                  <option value="gender">Gender</option>
-                  <option value="boy">Boy</option>
-                  <option value="girl">Girl</option>
-                </select>
+                <div class="dropdown">
+                  <button class="dropdown__button" type="button">Gender</button>
+                  <ul class="dropdown__list">
+                    <li class="dropdown__list-item dropdown__list-item--active">
+                      Gender
+                    </li>
+                    <li class="dropdown__list-item">Boy</li>
+                    <li class="dropdown__list-item">Girl</li>
+                  </ul>
+                </div>
                 <input type="text" placeholder="Email" class="form__input" />
                 <textarea
                   placeholder="Your wish"
