--- a/index.html
+++ b/index.html
@@ -145,7 +145,6 @@
             </div>
             <div class="presents__right">
               <div
-                id="presents__slider"
                 class="presents__slider swiper-container"
               >
                 <div class="swiper-wrapper">
@@ -160,7 +159,7 @@
                         types etting industry. Lorem
                       </p>
                     </div>
-                    <div class="slide__img">
+                    <div class="slide__img slide__img--sock">
                       <img
                         src="./src/images/new-year-sock.png"
                         alt="new year sock"
