--- a/index.html
+++ b/index.html
@@ -3,11 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-    />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./libs/css/swiper-bundle.min.css" />
     <title>Document</title>
   </head>
   <body>
@@ -84,7 +81,7 @@
               <a class="hero__button">Call to action</a>
             </div>
             <div class="hero__arrow">
-              <img src="./src/icons/arrow.svg" alt="arrow down">
+              <img src="./src/icons/arrow.svg" alt="arrow down" />
             </div>
             <div class="hero__snowflake">
               <img src="./src/images/big-snowflake.png" alt="snowflake" />
@@ -133,9 +130,7 @@
               </div>
             </div>
             <div class="presents__right">
-              <div
-                class="presents__slider swiper-container"
-              >
+              <div class="presents__slider swiper-container">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <div class="slide__info">
@@ -232,7 +227,7 @@
     </div>
 
     <script type="module" src="./scripts/index.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="./libs/js/swiper-bundle.min.js"></script>
+    <script src="./libs/js/gsap.min.js"></script>
   </body>
 </html>
