--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./libs/css/swiper-bundle.min.css" />
+    <link
+      rel="preload"
+      href="./fonts/Risque-Regular.woff"
+      as="font"
+      type="font/woff"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="./fonts/Risque-Regular.ttf"
+      as="font"
+      type="font/ttf"
+      crossorigin
+    />
     <title>Document</title>
   </head>
   <body>
