add meta description

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="description" content="test task by DL" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./libs/css/swiper-bundle.min.css" />
@@ -125,18 +126,21 @@
               <div class="presents__options">
                 <button
                   data-swiper-id="0"
+                  aria-label="present sock option"
                   class="present__single-option present__single-option--sock active"
                 >
                   <img src="./src/images/new-year-sock.png" alt="" />
                 </button>
                 <button
                   data-swiper-id="1"
+                  aria-label="present hat option"
                   class="present__single-option present__single-option--hat"
                 >
                   <img src="./src/images/christmas-hat.png" alt="" />
                 </button>
                 <button
                   data-swiper-id="2"
+                  aria-label="present bag option"
                   class="present__single-option present__single-option--bag"
                 >
                   <img src="./src/images/new-year-bag.png" alt="" />
