animate big snowflake, so it changes location on scroll

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
     </header>
     <div id="page-slider" class="page-slider swiper-container">
       <div class="swiper-wrapper">
+        <div class="big-snowflake">
+          <img src="./src/images/big-snowflake.png" alt="snowflake" />
+        </div>
         <div class="swiper-slide">
           <div class="section hero">
             <div class="hero__info">
@@ -97,9 +100,6 @@
             </div>
             <div class="hero__arrow">
               <img src="./src/icons/arrow.svg" alt="arrow down" />
-            </div>
-            <div class="hero__snowflake">
-              <img src="./src/images/big-snowflake.png" alt="snowflake" />
             </div>
             <div class="hero__santa">
               <img src="./src/images/santa.png" alt="santa" />
