--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       type="font/ttf"
       crossorigin
     />
-    <title>Document</title>
+    <title>Test Task DL</title>
   </head>
   <body>
     <header class="header">
@@ -28,7 +28,7 @@
         <picture>
           <source srcset="/src/images/logo-white.webp" type="image/webp" />
           <source srcset="/src/images/logo-white.png" type="image/png" />
-          <img src="/src/images/logo-white.png" alt="logo"/>
+          <img src="/src/images/logo-white.png" alt="logo" />
         </picture>
       </div>
       <nav class="header__menu">
@@ -96,7 +96,10 @@
           <picture>
             <source srcset="/src/images/big-snowflake.webp" type="image/webp" />
             <source srcset="/src/images/big-snowflake.png" type="image/png" />
-            <img src="/src/images/big-snowflake.png" alt="big snowflake rotating"/>
+            <img
+              src="/src/images/big-snowflake.png"
+              alt="big snowflake rotating"
+            />
           </picture>
         </div>
         <div class="swiper-slide">
@@ -113,7 +116,7 @@
               <picture>
                 <source srcset="/src/images/santa.webp" type="image/webp" />
                 <source srcset="/src/images/santa.png" type="image/png" />
-                <img src="/src/images/santa.png" alt="santa"/>
+                <img src="/src/images/santa.png" alt="santa" />
               </picture>
               <div class="hero__cloud">
                 <div class="cloud__circle">
@@ -150,7 +153,10 @@
                       srcset="/src/images/new-year-sock.png"
                       type="image/png"
                     />
-                    <img src="/src/images/new-year-sock.png" alt="new year sock option" />
+                    <img
+                      src="/src/images/new-year-sock.png"
+                      alt="new year sock option"
+                    />
                   </picture>
                 </button>
                 <button
@@ -167,7 +173,10 @@
                       srcset="/src/images/christmas-hat.png"
                       type="image/png"
                     />
-                    <img src="/src/images/christmas-hat.png" alt="christmas hat option"/>
+                    <img
+                      src="/src/images/christmas-hat.png"
+                      alt="christmas hat option"
+                    />
                   </picture>
                 </button>
                 <button
@@ -184,7 +193,10 @@
                       srcset="/src/images/new-year-bag.png"
                       type="image/png"
                     />
-                    <img src="/src/images/new-year-bag.png" alt="new year bag option"/>
+                    <img
+                      src="/src/images/new-year-bag.png"
+                      alt="new year bag option"
+                    />
                   </picture>
                 </button>
               </div>
@@ -213,7 +225,10 @@
                           srcset="/src/images/new-year-sock.png"
                           type="image/png"
                         />
-                        <img src="/src/images/new-year-sock.png" alt="new year sock information" />
+                        <img
+                          src="/src/images/new-year-sock.png"
+                          alt="new year sock information"
+                        />
                       </picture>
                     </div>
                   </div>
@@ -238,7 +253,10 @@
                           srcset="/src/images/christmas-hat.png"
                           type="image/png"
                         />
-                        <img src="/src/images/christmas-hat.png" alt="christmas hat information"/>
+                        <img
+                          src="/src/images/christmas-hat.png"
+                          alt="christmas hat information"
+                        />
                       </picture>
                     </div>
                   </div>
@@ -263,7 +281,10 @@
                           srcset="/src/images/new-year-bag.png"
                           type="image/png"
                         />
-                        <img src="/src/images/new-year-bag.png" alt="new year bag information"/>
+                        <img
+                          src="/src/images/new-year-bag.png"
+                          alt="new year bag information"
+                        />
                       </picture>
                     </div>
                   </div>
