update action-arrow styles

--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
             />
           </picture>
         </div>
+        <div class="arrow">
+          <img src="./src/icons/arrow.svg" alt="arrow down" />
+        </div>
         <div class="swiper-slide">
           <div class="section hero">
             <div class="hero__info">
               <h1 class="hero__title">Main Site Title</h1>
               <p class="hero__subtitle">Lorem ipsum descripsum</p>
               <a class="hero__button" href="#">Call to action</a>
-            </div>
-            <div class="hero__arrow">
-              <img src="./src/icons/arrow.svg" alt="arrow down" />
             </div>
             <div class="hero__santa">
               <picture>
