fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
           </li>
           <li class="menu-list__item">
             <a href="#" class="menu-list__link">
-              <div class="white">Conctacts</div>
-              <div class="red">Conctacts</div>
-              Conctacts
+              <div class="white">Contacts</div>
+              <div class="red">Contacts</div>
+              Contacts
             </a>
           </li>
         </ul>
@@ -83,7 +83,7 @@
               <a href="#" class="sidemenu__link">Products</a>
             </li>
             <li class="sidemenu__list-item">
-              <a href="#" class="sidemenu__link">Conctacts</a>
+              <a href="#" class="sidemenu__link">Contacts</a>
             </li>
           </ul>
         </nav>
